--- a/ID/config.ini
+++ b/ID/config.ini
@@ -18,7 +18,7 @@
 config_version = "7" // 0 or bigger
 
 //keep track of hardware configuration to detect hardware changes
-hardware_checksum = "-1671876773" // integer
+hardware_checksum = "" // integer
 
 //
 //Gameplay
@@ -272,7 +272,7 @@ mute_voice = "0" // 0 or 1
 mute_audio_out_of_focus = "1" // 0 or 1
 
 //Main output device
-sound_output_device = "Speakers (Realtek(R) Audio)" // any text
+sound_output_device = "" // any text
 
 //
 //Voice Chat
