--- a/config.ini
+++ b/config.ini
@@ -71,7 +71,7 @@ window_width = "600" // 0 to 16384
 window_height = "800" // 0 to 16384
 
 //Window is maximized on boot
-window_maximized = "0" // 0 or 1
+window_maximized = "1" // 0 or 1
 
 //Fullscreen resolution
 fullscreen_resolution = "800x600" // any text
@@ -88,7 +88,7 @@ vsync = "0" // 0 or 1
 vsync_menu = "0" // 0 or 1
 
 //Percentage of window resolution that the 3D scene renders at. value set by the user. can be smaller than the actual.
-resolution_percent = "96" // 20 to 200
+resolution_percent = "100" // 20 to 200
 
 //Color spaces for monitor output
 display_gamma = "sRGB" //  sRGB, or rec.709
@@ -107,7 +107,7 @@ mesh_quality = "0" // 0 to 4
 texture_filter = "0" // 0 to 2
 
 //Number of mips to drop on streamed textures, lower numbers are higher quality
-texture_quality = "3" // 0 to 7
+texture_quality = "7" // 0 to 7
 
 //Use texture extra ('next gen') mip maps
 use_extra_mips = "0"
@@ -138,7 +138,7 @@ aa_technique = "None" //  None, FXAA, SMAA 1x, Filmic SMAA 1x, SMAA T2x, or Film
 aa_technique_preferred = "None" //  None, FXAA, SMAA 1x, Filmic SMAA 1x, SMAA T2x, or Filmic SMAA T2x
 
 //DLSS performance mode
-dlss_perf_mode = "" //  Ultra performance, Performance, Balanced, Quality, Ultra Quality, or Automatic
+dlss_perf_mode = "Ultra performance" //  Ultra performance, Performance, Balanced, Quality, Ultra Quality, or Automatic
 
 //Per-object motion blur
 motion_blur = "Off" //  Off, Auto, On, or Viewmodel Only
@@ -320,11 +320,11 @@ last_driver_amd = "0" // 0 or bigger
 last_recommended_driver_amd = "83931137" // 0 or bigger
 
 //Fraction of video memory usage to target
-video_memory = "0.8" // 0.5 to 1
+video_memory = "0.5" // 0.5 to 1
 
 //Number of jobqueue worker threads that will NOT do background compilation of PSOs
 pso_excluded_workers = "1" // 0 to 15
 
 //Frame rate cap in the frontend while precompiling shaders (0 for unlimited)
-pso_preload_max_fps = "37" // 0 or bigger
+pso_preload_max_fps = "30" // 0 or bigger
 
